Delete one DocumentType domain model
RISDEV-2517